--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -162,18 +162,19 @@ We've designed the hardware and software to be compatible with any Raspberry Pi 
 *   Raspberry Pi 3 Model B & B+
 *   Raspberry Pi 3 Model A+
 *   Raspberry Pi 4 Model B ² ³
-*   Raspberry Pi 5 ² ³
+*   Raspberry Pi 5 ² ³ ⁴
 *   Raspberry Pi Zero W (with headers) ¹
 *   Raspberry Pi Zero 2 (with headers)
 
 
-Although you can use any above, **we like the Raspberry Pi 4 Model 3 B+, Raspberry Pi 4 Model B, and Raspberry Pi Zero 2**. Both have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't a ethernet connector built-in. So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi 3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
+Although you can use any above, **we like the Raspberry Pi 3 B+, Raspberry Pi 4 B 2GB and Raspberry Pi Zero 2**. All have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't a ethernet connector built-in. So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi 3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
 
 ¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all roles.
 
-² You don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM RPi if offered a choice. 1GB is fine.
+² You don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM RPi if offered a choice. 2GB or less is fine. Also, if you are going to buy a Raspberry Pi 4, you should consider just upgrading for the Raspberry Pi 5 2GB (it's only a few dollars more, and much more performant).
 
 ³ These have a USB-C power connector, whereas the other Pis have a microUSB power connector.
+
 
 #### What microSD cards do you recommend?
 
