new networking dir; notes on internet sharing

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -61,9 +61,7 @@ What is an image file? It's a file that contains all the required software prein
         -   Note: You can change the username and password later.
     4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet.
 	:::tip
-    If you are having difficulty connecting to a network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
-
-    Note that any tutorials that mention `wpa_supplicant.conf` are **out of date**. This has been deprecated by Raspberry Pis for a while. We have some further documentation on [networking available here](/user-guide/networking).
+    If you are having difficulty connecting to a network, like at a university that may not easily incorporate Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)) and a [solution for internet-sharing from a PC via ethernet](/user-guide/internet-sharing).
 	:::
 	
     5. Change timezone to your local timezone.
