--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -7,10 +7,10 @@ import TOCInline from '@theme/TOCInline';
 
 <TOCInline toc={toc} />
 
-Pioreactor operation
-------------------------
+## Pioreactor operation
 
-#### How can I restart my Pioreactor? Is pulling the power plug out safe?
+
+### How can I restart my Pioreactor? Is pulling the power plug out safe?
 
 We suggest using the UI to reboot a Pioreactor:
 
@@ -19,22 +19,22 @@ We suggest using the UI to reboot a Pioreactor:
 Pulling the plug is usually fine, but try to avoid doing it as it does risk data corruption.
 
 
-#### Can I still use the Pioreactor software without the hardware?
+### Can I still use the Pioreactor software without the hardware?
 
 Yes - the Pioreactor UI and software will still work. We provide a "leader-only" image that is designed to only host a cluster, and not be an active worker. The leader-only image, `pioreactor_leader.zip
 `, are available [here](https://github.com/Pioreactor/CustoPiZer/releases).
 
-#### Why does the onboard blue LED keep flashing?
+### Why does the onboard blue LED keep flashing?
 
 There may be a problem. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes).
 
-#### What does the onboard button do?
+### What does the onboard button do?
 
 The button on the Pioreactor HAT sends a signal to the web UI to display a "hello" message. This is useful to know which Pioreactor in a cluster you are interacting with.
 
 The button can be [reprogrammed](/developer-guide/hat-button), too.
 
-#### How do I change the date or time on the Pioreactor?
+### How do I change the date or time on the Pioreactor?
 
 [SSH](/user-guide/accessing-raspberry-pi) into your Pioreactor, and run:
 ```
@@ -43,18 +43,18 @@ sudo date --set "2023-11-02 09:46:50"
 ```
 
 
-Optical density and LEDs
-------------------------
+## Optical density and LEDs
 
-#### How does optical density work on the Pioreactor?
+
+### How does optical density work on the Pioreactor?
 
 The Pioreactor uses turbidity to measure optical density (other systems, like spectrophotometers, use attenuation). Specifically, the Pioreactor uses _scattering_ of light. The system will shine infrared light into the culture, and measure the amount of light that is scattered off cells. The scattering has a good linear range (see below for more), and higher saturation point than attenuation for cultures of 20ml volume. If you have an instrument that measures OD600 or some other measurement of optical density, and you wish to calibrate to that, the Pioreactor has a routine to perform a calibration and record in the instruments units. See [docs here](/user-guide/calibrate-od600).
 
-#### What are the units of Pioreactor's optical density
+### What are the units of Pioreactor's optical density
 
 The _uncalibrated_ optical densities reported the UI and recorded in the database are have an arbitrary unit, and are per Pioreactor (so they can't be compared to each other). However, the _normalized optical density_, generated after starting the activity **Growth rate** in the UI, is comparable, which is why we suggest using it for inferences (especially if you haven't calibrated to some OD600 machine). Read more about our [optical density measurements here](https://docs.pioreactor.com/user-guide/od-normal-growth-rate).
 
-#### How can I change the frequency (rate) of optical density measurements?
+### How can I change the frequency (rate) of optical density measurements?
 
 In the configuration, you can edit the parameter `samples_per_second` to adjust the how often the Pioreactor takes an optical density snapshot. Note that this parameter is the inverse of "duration between readings". For example, if you wish to record a measurement every 60 seconds, then `samples_per_second=0.01666667` (which is 1/60).
 
@@ -78,67 +78,67 @@ nano /var/www/pioreactorui/contrib/charts/04_normalized_od.yaml
 :::
 
 
-#### Why does the intensity for LED A turn on & off during an experiment?
+### Why does the intensity for LED A turn on & off during an experiment?
 
 You may have noticed that the LED labelled A turns on & off every 5 seconds or so. This is (normally) the channel for the infrared (IR) LED, which is used in the optical density measurements. We only take reading every 5 seconds (the default), we don't need the IR LED on all the time. The Pioreactor will only turn on LED when needed. This preserves the strength of the LED over longer periods of time. For more advanced use cases, it also allows other optical measurements to take place without the IR LED interfering with them.
 
-#### Why does my optical density flatten, or even decrease? What is a saturation point?
+### Why does my optical density flatten, or even decrease? What is a saturation point?
 
 For some experiments, especially when using a scatter angle of 135°, you may notice that the optical density starts to flatten, and even decrease, _when you know the culture should still be growing_. This is not a property of the culture, but occurs because the culture is getting too dense, and light is now being interrupted before it reaches the photodiodes. Prior to this point, called the saturation point, the relationship between culture density and optical density is nearly linear. But after this point, there is a flattening, even negative, relationship between culture density and optical density. For all analysis, we recommend only studying when the culture is in the linear regime. You can mitigate the problem by choosing a smaller scatter angle (like 90° or 45°), diluting the culture using an automation like the turbidostat, or using a lower concentration of nutrient(s) in the media. Read more about Pioreactor's optical system [here](https://pioreactor.com/blogs/pioreactor/estimating-growth-rates-with-kalman-filters).
 
-#### What does the effect of the scatter angle have on optical density?
+### What does the effect of the scatter angle have on optical density?
 
 The scatter angle is the angle between the IR LED and a photodiode. This angle can be 45°, 90°, or 135°  (although 180° is possible, we don't consider it here). What is there to consider when choosing an angle. In general, the trend is shorter angles => less sensitive at low densities, but higher saturation point. By default, we suggest 45° as a good trade off between sensitivity and saturation. You can mix angles, and the Pioreactor's internal algorithm will still combine them into a single growth rate. Read more about Pioreactor's optical system [here](https://pioreactor.com/blogs/pioreactor/estimating-growth-rates-with-kalman-filters).
 
 
-#### Can I use my own 5mm LEDs and photodiodes for optical density?
+### Can I use my own 5mm LEDs and photodiodes for optical density?
 
 Of course! The only two requirements are that the spectrum of the LED overlaps with the spectrum of the photodiode, and that the LED light won't be absorbed by media/culture, nor damage the media/culture. Thus, the often-used 600nm light source works in the Pioreactor. None of our internal algorithms or analytics are dependent on the wavelength of light chosen.
 
 When you are using additional LEDs outside of the optical density LED & photodiode pair, you may worry that your additional LEDs will interfere with the optical density measurement. This won't happen, as we turn off all non-optical density LEDs before taking an optical density measurement.
 
-#### Is optical density the same as turbidity?
+### Is optical density the same as turbidity?
 
 Turbidity is a measure of optical density, like how decibels are a measurement of sound intensity. Similarly, absorbance is a measure of optical density.
 
 
-Heating and Temperature control
----------------------------------
+## Heating and Temperature control
 
-#### Why does the Pioreactor only provide a temperature reading every few minutes?
+
+### Why does the Pioreactor only provide a temperature reading every few minutes?
 
 We made a design choice early on to make preparation as error-free as possible. This involved thinking about sensors being _in situ_ (in place), versus the sensors being on the outside of the vial. The temperature sensor in the Pioreactor is outside the vial, which means less chance of contamination, but there's a tradeoff (as you could guess): we have to rely on an estimation algorithm that requires a gew minutes to gather data on. We think this is a fair trade-off, as high frequency temperature readings are not that important in an experiment that lasts 12 hours or more.
 
-#### Why does the Pioreactor's heating keep shutting off?
+### Why does the Pioreactor's heating keep shutting off?
 
 If you find that the Pioreactor's heating is shutting off, typically with an accompanying error and flashing blue light, then likely the temperature is becoming too high for safe handling. We restrict the onboard PCB's temperature to be no higher than 63℃. Temperature's higher than this can deform the plastic, and possibly cause burns. If the Pioreactor detects a temperature near or above this value, the software will shut off the heating, and possible the entire Raspberry Pi in extreme cases.
 
 To avoid this occurring, we suggest not setting the target temperature too high - not more than 20℃ above ambient temperature. Also, reducing the `Kd` parameter in `[temperature_automation.stable]` section in the config.ini would help.
 
-#### How does heating work on the Pioreactor?
+### How does heating work on the Pioreactor?
 
 The Pioreactor has an onboard PCB, called the heating PCB, that sits below the glass vial. On the PCB are resistors that convert current from PWM outputs into heat. By varying the duty cycle of the PWM, we vary the amount of energy converted to heat.
 
-Mixing and stirring in the Pioreactor
----------------------------------------
+## Mixing and stirring in the Pioreactor
 
-#### How is mixing / stirring performed in the Pioreactor?
+
+### How is mixing / stirring performed in the Pioreactor?
 
 Stirring is performed with a micro stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the stir bar can be controlled using the Pioreactor software. This stirring is also how aeration is done.
 
-#### Can I use my own stir bar?
+### Can I use my own stir bar?
 
 Of course! The maximum length of a stir bar is 20mm. Keep the height low as to not interfere with the optics. (The provided stir bar is 3mm high). Try using other stir bar shapes / designs!
 
-#### The magnets rubs against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
+### The magnets rubs against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
 
 Dis-attach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
 
-#### How can I increase the strength of the magnetic force applied to the stirbar?
+### How can I increase the strength of the magnetic force applied to the stirbar?
 
 **For Pioreactor 20ml v1.0**: Try to reduce the distance between the stirring magnets and the stir bar by carefully raising the stirring fan a small amount. Going even further, you can remove the 4mm screws in the bottom of the vial holder (but find another way to secure the PCB), thereby be able to bring the magnets even closer.
 
-#### How can I improve mixing and aeration?
+### How can I improve mixing and aeration?
 
 If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, (in increasing order of complication, not necessarily effectiveness):
 
@@ -147,66 +147,65 @@ If the standard mixing and aeration with the stir bar is not enough for your app
 4. Add a [baffle](https://www.printables.com/model/575292-baffle-for-pioreactor-vial-cap-a/files) to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
 5. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
 
-#### Can I plot the RPM in a chart in the UI?
+### Can I plot the RPM in a chart in the UI?
 
 Yes, follow the instructions [here](https://forum.pioreactor.com/t/creating-stirring-rpm-and-pwm-duty-cycle-charts-on-the-ui/339).
 
 
-Raspberry Pi Hardware
----------------------
+## Raspberry Pi Hardware
 
-#### What Raspberry Pi hardware can I use? I see Raspberry Pi 1, 2, 3, 4, 5, A, B, +, Zero - it's confusing!
+
+### What Raspberry Pi hardware can I use? I see Raspberry Pi 1, 2, 3, 4, 5, A, B, +, Zero - it's confusing!
 
 We've designed the hardware and software to be compatible with any Raspberry Pi that has onboard Wifi and a 40 pin header. That includes (at the time of writing):
 
 *   Raspberry Pi 3 Model B & B+
 *   Raspberry Pi 3 Model A+
 *   Raspberry Pi 4 Model B ² ³
-*   Raspberry Pi 5 ² ³ ⁴
+*   Raspberry Pi 5 ² ³
 *   Raspberry Pi Zero W (with headers) ¹
 *   Raspberry Pi Zero 2 (with headers)
 
 
 Although you can use any above, **we like the Raspberry Pi 3 B+, Raspberry Pi 4 B 2GB and Raspberry Pi Zero 2**. All have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't a ethernet connector built-in. So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi 3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
 
-¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all roles.
+¹ _Raspberry Pi Zero W_ can be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all roles.
 
 ² You don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM RPi if offered a choice. 2GB or less is fine. Also, if you are going to buy a Raspberry Pi 4, you should consider just upgrading for the Raspberry Pi 5 2GB (it's only a few dollars more, and much more performant).
 
 ³ These have a USB-C power connector, whereas the other Pis have a microUSB power connector.
 
 
-#### What microSD cards do you recommend?
+### What microSD cards do you recommend?
 
 At least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for their longevity, but any good quality, class 10 SD card will do.
 
-#### What power supply unit (PSU) do I need?
+### What power supply unit (PSU) do I need?
 
 If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W. We really like the [official Raspberry Pi PSUs](https://www.raspberrypi.com/products/#power-supplies-and-cables), available at most places you can purchase Raspberry Pis.
 
 If you need to power multiple Pioreactors, you might consider a single PSU with USB ports [detailed here](/user-guide/powering-cluster).
 
-#### Do I need any cooling for the Raspberry Pi?
+### Do I need any cooling for the Raspberry Pi?
 
 Nope, you shouldn't. However, extra heat sinks are never a bad idea!
 
-#### Could a Raspberry Pi-compatible board work, like Rock Pi 4?
+### Could a Raspberry Pi-compatible board work, like Rock Pi 4?
 
 Maybe? We haven't tested them, but so long as i) the GPIO pins are identical, and ii) Raspberry Pi OS can be installed, it should work.
 
-#### What is the username/password for the Raspberry Pi?
+### What is the username/password for the Raspberry Pi?
 
 When setting up your Raspberry Pi with the Pioreactor software, you would have chosen a password. Try the recommended username: `pioreactor`, and password: `raspberry`.
 
-#### Can I use the desktop interface (with a display) with the Pioreactor?
+### Can I use the desktop interface (with a display) with the Pioreactor?
 
 Not currently. Our software is based of the "headless" operating-system, which doesn't have display output.
 
 
-Dosing
-------------------------
+## Dosing
 
-#### Why does the Media card in the UI not update when I run a dosing command?
+### Why does the Media card in the UI not update when I run a dosing command?
 
 The Media card will _only_ update when an [Dosing Automation](/user-guide/dosing-automations) is active (even the `Silent` automation). Why is it done this way? Often, you don't want volumes to be recorded there: during cleaning, during testing, etc. Often you only want volumes associated with the experiment to be there.
 
@@ -216,24 +215,24 @@ All dosing events ares recorded to the database however, and with a record of wh
 
 
 
-Data storage, access and recovery
----------------------------------
+## Data storage, access and recovery
+
 
 > 💡 For any important project, we suggest manually exporting or backing up critical data multiple different places. This doesn't just apply to using the Pioreactor, but is good advice in general.
 
-#### Where are logs stored?
+### Where are logs stored?
 
 For the logs that you see in the Log Table in the _Experiment Overview_ page, these can be download on the _Download experiment data_ page in the Pioreactor web interface. Other logs are also available, including dosing event and algorithm change-logs.
 
 More granular logs per Pioreactor are available in `/var/log/pioreactor.log` on the Raspberry Pis.
 
-#### How do I access raw experiment data?
+### How do I access raw experiment data?
 
 1.  The  _Export data_ page in the Pioreactor UI provides CSV exports of common datasets from a pre-selected experiment.
 2.  All data eventually lands in a SQLite3 database on the leader Pioreactor, by default located in `/home/pioreactor/.pioreactor/storage/pioreactor.sqlite`. This can be download using a tool like `scp`.
 3. To access the SQLite3 database from the command line, try `pio db`.
 
-#### My microSD card is corrupted - what can I do?
+### My microSD card is corrupted - what can I do?
 
 Unfortunately, the microSD card becoming corrupted or damaged is an infrequent but possible risk with using Raspberry Pis.
 
@@ -241,35 +240,34 @@ Unfortunately, the microSD card becoming corrupted or damaged is an infrequent b
 
 - If the microSD was inside the leader Raspberry Pi, this is a bigger problem. Likely any running experiment will have to be restarted. Fortunately, if you have more than one Pioreactor in your cluster, then the leader's SQLite database has been periodically backing itself up to other Pioreactors in the cluster every few days. Using the command line, check other Pioreactors' `/home/pioreactor/.pioreactor/storage` directory for the _latest_ backup named `pioreactor.sqlite.backup` (should be from within the past few days hours). You can use this database to restart a new leader.
 
-Networking
----------------------------------
+## Networking
 
-#### How do I change/edit the network the Pioreactor on?
+### How do I change/edit the network the Pioreactor on?
 
 See documentation on networking [here](/user-guide/networking#general-networking-tools).
 
-#### Can I use Ethernet cable connections instead of Wifi connections?
+### Can I use Ethernet cable connections instead of Wifi connections?
 
 Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and Wifi is fine. You can read more about networking Pioreactors [here](/user-guide/networking).
 
-#### How can I determine the Pioreactor's IP address? Or the MAC address?
+### How can I determine the Pioreactor's IP address? Or the MAC address?
 
 Depending on your access to the Pioreactor, there are a few ways:
 
 1. In the UI's Inventory page.
 3. If you can't access the Pioreactor's UI or SSH in: the software will write the IP address to the `/boot` directory on the SD card. After the Pioreactor's blue LED has blinked, you can unplug the Pioreactor, remove the SD card, and place the SD card in another computer. Navigate to the card, and in the directory you should see a file called `ip`. Open this file, and the IP address should be there. Place the SD card back into the Pioreactor and plug it back in.
 
-#### I'm using a local access point, but I'd like to install plugins, update software, etc.
+### I'm using a local access point, but I'd like to install plugins, update software, etc.
 
-##### To install a plugin
+#### To install a plugin
 
-On a computer that is connected to the internet, download the `.whl` file from the plugins webpage on PyPI. Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to install the plugin on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio plugins install <plugin-name> <path/to/local/.whl>`
+On a computer that is connected to the internet, download the `.whl` file from the plugins webpage on PyPI. Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to install the plugin on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio plugins install <plugin-name> --source <path/to/local/.whl>`
 
 
-##### To upgrade the Pioreactor software
+#### To upgrade the Pioreactor software
 
 See steps [here](/user-guide/updating-software#method-2-update-using-a-zip-file-and-the-ui).
 
-#### If I have multiple Pioreactor leaders on my network, what leader does `http://pioreactor.local` point to?
+### If I have multiple Pioreactor leaders on my network, what leader does `http://pioreactor.local` point to?
 
 If there are multiple leaders on the same network, then each will override the other's `pioreactor.local` alias, and the alias will be unreliable. You can either access the leaders by their hostnames: `http://<leader hostname>.local`, or you can change the alias in the config.ini, too, by editing `domain_alias` under section `[ui]` (changing this requires a restart of the machine).
