--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -95,13 +95,13 @@ Waited, but didn't see a blue LED blink, or maybe you missed it? Try pressing on
 9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. If you are using local-access-point, looking for a `pioreactor` wifi network and then visit the link. (Not able to load http://pioreactor.local? Read [Troubleshooting](#pioreactorlocal-in-a-web-browser-is-not-showing-up) below).
 10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
-10. **If you're using a Pioreactor 20ml v1.0, edit your config.ini to**
+10. **If you're using a Pioreactor 20ml v1.0 (sold prior to May 2024) edit your config.ini to**
     ```
     [pioreactor]
     model=pioreactor_20ml
     version=1.0
     ```
-    and then reboot.
+    You can find this in the UI -> Configuration -> select your Pioreactor's config.ini from the dropdown, edit, and save. Finally **reboot your Pioreactor**.
 
 
 ## Adding additional workers to your cluster
