select worker version before downloading

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -6,6 +6,7 @@ slug: /software-set-up
 ---
 
 import TOCInline from '@theme/TOCInline';
+import ButtonDownloadVersionedImage from '@site/src/components/ButtonDownloadVersionedImage';
 
 
 ### Before you begin
@@ -29,7 +30,7 @@ Before you get started, you'll need to have the following:
 
 We'll start your blank microSD card.
 
-1. Download the [Pioreactor leader & worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
+1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
 
 :::info
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be installed on the microSD card.
@@ -110,9 +111,17 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
 #### Step 1. Install the worker software
 
-1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
+1. Download a *Pioreactor worker image*:
 
-   :::note
+   :::tip
+   Check the software version of your leader first (you can find that on the Updates page, or the Inventory Page, or use `pio version` on the command line). It's recommended to download the associated worker image for that same version.
+   :::
+
+   <ButtonDownloadVersionedImage type={'worker'}/>
+
+2. Follow the same instructions above to write the image to an SD card. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
+
+   :::tip
    Choose a hostname that isn't currently being used in your cluster, ex: `worker01`, `worker02`, etc. Re-using old names is fine, so long as that worker isn't present in your cluster.
 
    **Tip**: if you plan to have many Pioreactors, use a leading zero in any numbers, like `pio01`, or `worker01`, etc.
@@ -185,3 +194,14 @@ Easiest solution is to start over. You can edit the name in the RPi Imager, and 
 #### Can I plug a monitor into the Raspberry Pi's HDMI port?
 
 Our current software turns off all external displays (for power and compute reasons), so any external monitor attached to the Pi won't work.
+
+#### I want a different leader-worker software version.
+
+<ButtonDownloadVersionedImage type={'leader_worker'}/>
+
+
+#### I'd like to have the leader _not be a worker_, and only a standalone leader. Can I do that?
+
+Sure, we have a custom image that only has the leader software on it. See below:
+
+<ButtonDownloadVersionedImage type={'leader'}/>
