--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -30,7 +30,7 @@ Before you get started, you'll need to have the following:
 
 We'll start your blank microSD card.
 
-1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip).
+1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip). Leave it as a zip (no need to unzip it).
 
 :::info
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be installed on the microSD card.
@@ -111,7 +111,7 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
 #### Step 1. Install the worker software
 
-1. Download a *Pioreactor worker image*:
+1. Download a *worker image*:
 
    :::tip
    Check the software version of your leader first (you can find that on the Updates page, or the Inventory Page, or use `pio version` on the command line). It's recommended to download the associated worker image for that same version.
