netwokring docs and sd cards docs

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -119,12 +119,12 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
    <ButtonDownloadVersionedImage type={'worker'}/>
 
-2. Follow the same instructions above to write the image to an SD card. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
+2. Follow the same instructions above to write the image to an microSD card. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
 
    :::tip
    Choose a hostname that isn't currently being used in your cluster, ex: `worker01`, `worker02`, etc. Re-using old names is fine, so long as that worker isn't present in your cluster.
 
-   **Tip**: if you plan to have many Pioreactors, use a leading zero in any numbers, like `pio01`, or `worker01`, etc.
+   If you plan to have many Pioreactors, use a leading zero in any numbers, like `pio01`, or `worker01`, etc.
    :::
 
    Below is a screenshot of example settings, your settings might be slightly different.
