--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -175,7 +175,9 @@ Although you can use any above, **we like the Raspberry Pi 3 B+, Raspberry Pi 4 
 
 ### What microSD cards do you recommend?
 
-At least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for their longevity, but any good quality, class 10 SD card will do.
+The Raspberry Pi has an _official Raspberry Pi microSD card_ that we recommend for its high quality. You can likely purchase it at the same place you purchase PSUs and Pis. The 32 GB, blank, version is fine.
+
+In general: at least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for their longevity, but any good quality, class 10 microSD card will do.
 
 ### What power supply unit (PSU) do I need?
 
