--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -30,7 +30,7 @@ Before you get started, you'll need to have the following:
 
 We'll start your blank microSD card.
 
-1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip). Leave it as a zip (no need to unzip it).
+1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip). Leave it as a zip file - no need to unzip it.
 
 :::info
 What is an image file? It's a file that contains all the required software preinstalled on it, including an operating system and our custom Pioreactor software. The image will be installed on the microSD card.
@@ -93,7 +93,7 @@ What is an image file? It's a file that contains all the required software prein
 Waited, but didn't see a blue LED blink, or maybe you missed it? Try pressing on the onboard button, near the side labelled "PWM", and pictured above. If this lights up the blue LED, you're good to move on. Still not working? Try power-cycling the Raspberry Pi, or email us at hello@pioreactor.com.
 :::
 
-9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. If you are using local-access-point, looking for a `pioreactor` wifi network and then visit the link. (Not able to load http://pioreactor.local? Read [Troubleshooting](#pioreactorlocal-in-a-web-browser-is-not-showing-up) below).
+9. After observing the blue LED flashing, navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. If you are using local-access-point, looking for a `pioreactor` wifi network and then visit the link. (Not able to load http://pioreactor.local? Read [Common Questions](#pioreactorlocal-in-a-web-browser-is-not-showing-up) below).
 10. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
 10. **If you're using a Pioreactor 20ml v1.0 (sold prior to May 2024) edit your config.ini to**
@@ -119,12 +119,10 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
    <ButtonDownloadVersionedImage type={'worker'}/>
 
-2. Follow the same instructions above to write the image to an microSD card. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
+2. Follow the same instructions above to write the image to an microSD card. All the settings are the same, including *username* and *password*, **but choose a new hostname**. Choose a hostname that isn't currently being used in your cluster, ex: `worker01`, `worker02`, etc. Re-using old names is fine, so long as that worker isn't present in your cluster.
 
    :::tip
-   Choose a hostname that isn't currently being used in your cluster, ex: `worker01`, `worker02`, etc. Re-using old names is fine, so long as that worker isn't present in your cluster.
-
-   If you plan to have many Pioreactors, use a leading zero in any numbers, like `pio01`, or `worker01`, etc.
+   If you plan to have many Pioreactors, use a leading zero in numbers, like `pio01`, or `worker01`, etc.
    :::
 
    Below is a screenshot of example settings, your settings might be slightly different.
@@ -132,9 +130,9 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
    <img src="/img/user-guide/rpi-imager-settings-worker.png" width="625" alt="Screenshot of what your settings may look like" style={{margin: "auto", display:"block"}} />
 
-2. If using a local-access-point on your leader Pioreactor, use the wifi ssid `pioreactor` and password `raspberry`.
+2. If using a local-access-point on your leader Pioreactor, use the wifi ssid `pioreactor` and password `raspberry`. Otherwise, use the same wifi credentials are your leader Pioreactor.
 3. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on.
-4. The Pioreactor's blue LED will light up and stay on, indicating that it's ready to be connected. Move onto the next step.
+4. After a few minutes, the Pioreactor's blue LED will light up and stay on, indicating that it's ready to be connected. Move onto the next step.
 
 #### Step 2. Add worker to cluster using the UI
 
@@ -149,7 +147,7 @@ On the leader's command line, the command `pio add-pioreactor <new name>` will c
 We recommend running a [self-test](/user-guide/running-self-test) on all Pioreactors after your initial setup to detect any hardware bugs at this point.
 :::
 
-## Troubleshooting
+## Common questions
 
 #### My leader Pioreactor never flashes the blue LED
  - First, confirm that when you press the HAT button, the blue LED does not show up. If it does, you're good to go.
@@ -171,7 +169,6 @@ On a successful start, the Pioreactor will flash its blue LED for about 2 second
 *   You may have mis-typed your WiFi credentials. To fix this, you'll need to restart the image installation from the Raspberry Pi Imager.
 *   If connecting to a 5GHz WiFi connection, you _need_ to supply a valid country code. See the list here: [https://en.wikipedia.org/wiki/ISO\_3166-1\_alpha-2/](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 "Link to country codes on wikipedia").
 *   It's possible your SD card is damaged. This can cause all sorts of problems (including failing to boot), not just WiFi issues. The most common cause of SD card failure is probably inserting or removing the SD card while the Pi is powered up.
-*   Check out some other possibilities [here](https://community.octoprint.org/t/wifi-setup-and-troubleshooting/184#heading--troubleshooting).
 
 
 #### I want to change the Pioreactor name on installation of leader
