use new undraw illus.

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -77,7 +77,11 @@ What is an image file? It's a file that contains all the required software prein
     6.  Click **Save** to save and exit the dialog box.
 
 7. Click "Yes" to begin writing. A prompt *may* appear asking for permission to write, accept it. Writing will take up to 5 minutes. Perfect time for a tea break.
-7.  Once writing is complete, remove the microSD card, and place it into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor. Example for a Raspberry Pi A model:
+
+    <img src="/img/user-guide/coffee.svg" width="250" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
+
+
+8.  Once writing is complete, remove the microSD card, and place it into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor. Example for a Raspberry Pi A model:
 
     ![Insert the microSD card into a Raspberry Pi A model](/img/user-guide/place-micro-sd-card.JPG)
 
