--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -231,6 +231,12 @@ More granular logs per Pioreactor are available in `/var/log/pioreactor.log` on 
 2.  All data eventually lands in a SQLite3 database on the leader Pioreactor, by default located in `/home/pioreactor/.pioreactor/storage/pioreactor.sqlite`. This can be download using a tool like `scp`.
 3. To access the SQLite3 database from the command line, try `pio db`.
 
+### In Chrome, I often see a "Unsecure download" warning. Is that okay?
+
+Yes, since the Pioreactor UI uses the simpler http (not not http*s*), Chrome shows a warning about downloading the datasets. You can click through and continue the download.
+
+To remove this warning, you can click on the "Not Secure" button in the URL bar, click "Site settings", and set "Insecure content" to "Allow".
+
 ### My microSD card is corrupted - what can I do?
 
 Unfortunately, the microSD card becoming corrupted or damaged is an infrequent but possible risk with using Raspberry Pis.
@@ -254,6 +260,7 @@ Yes, so long as the Raspberry Pi's are connected to the same network and discove
 Depending on your access to the Pioreactor, there are a few ways:
 
 1. In the UI's Inventory page.
+2. After SSHing in, use `hostname -I`.
 3. If you can't access the Pioreactor's UI or SSH in: the software will write the IP address to the `/boot` directory on the SD card. After the Pioreactor's blue LED has blinked, you can unplug the Pioreactor, remove the SD card, and place the SD card in another computer. Navigate to the card, and in the directory you should see a file called `ip`. Open this file, and the IP address should be there. Place the SD card back into the Pioreactor and plug it back in.
 
 ### I'm using a local access point, but I'd like to install plugins, update software, etc.
