new fan and top faceplate version instructions

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -179,6 +179,8 @@ The Raspberry Pi has an _official Raspberry Pi microSD card_ that we recommend f
 
 In general: at least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for their longevity, but any good quality, class 10 microSD card will do.
 
+_Note that the official Raspberry Pi microSD card (32 GB) is now included in all Pioreactor + Raspberry Pi orders!_
+
 ### What power supply unit (PSU) do I need?
 
 If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W. We really like the [official Raspberry Pi PSUs](https://www.raspberrypi.com/products/#power-supplies-and-cables), available at most places you can purchase Raspberry Pis.
