--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -166,7 +166,7 @@ We've designed the hardware and software to be compatible with most Raspberry Pi
 *   Raspberry Pi Zero 2 (with headers)
 
 
-Although you can use any above, **we like the Raspberry Pi 3 B+, Raspberry Pi 4 B 2GB and Raspberry Pi Zero 2**. All have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't a ethernet connector built-in. So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi 3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
+Although you can use any above, **we like the Raspberry Pi 3 B+, Raspberry Pi 4 B 2GB, and Raspberry Pi Zero 2**. All have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. Talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi 3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
 
 ² You don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM RPi if offered a choice. 2GB or less is fine. Also, if you are going to buy a Raspberry Pi 4, you should consider just upgrading for the Raspberry Pi 5 2GB (it's only a few dollars more, and much more performant).
 
