remove this brand

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -88,7 +88,7 @@ What is an image file? It's a file that contains all the required software prein
 8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up momentarily. After **a few minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
-    <video width="520" muted loop="true" autoplay="autoplay">
+    <video width="520" muted loop={true} autoPlay="autoplay">
       <source src="/vid/flashing.mp4" type="video/mp4" />
     </video>
 </p>
