--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -8,17 +8,23 @@ import Card from '@site/src/components/Card';
 
 <p> Choose from the guides below:</p>
 
+<h3> Pioreactor 40ml assembly</h3>
+
+<div className="cardGrid">
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_40ml_v1.0_splash.jpeg" headerText="Pioreactor 40ml" isNew={true} linkUrl="/user-guide/40ml-hardware-setup-intro"/>
+</div>
+
 <h3> Pioreactor 20ml assembly</h3>
 
-<div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" isNew={true} linkUrl="/user-guide/20ml-v11-hardware-setup-intro"/>
+<div className="cardGrid">
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" linkUrl="/user-guide/20ml-v11-hardware-setup-intro"/>
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.0_splash.png" headerText="Pioreactor 20ml v1.0" linkUrl="/user-guide/hardware-setup-intro"/>
 </div>
 
 <h3> Upgrade kits and accessories</h3>
 
-<div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" isNew={true} linkUrl="/user-guide/v11-upgrade-hardware-setup"/>
+<div className="cardGrid">
+    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" linkUrl="/user-guide/v11-upgrade-hardware-setup"/>
     <Card imageUrl="user-guide/add-teh/14_teh_finished.jpeg" headerText="Temperature Expansion Kit" linkUrl="/user-guide/temperature-expansion-kit" />
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_dosing_splash.webp" headerText="Adding peristaltic pumps" linkUrl="/user-guide/using-pumps" />
     <Card imageUrl="user-guide/leds_splash.webp" headerText="Adding more LEDs" linkUrl="/user-guide/using-leds" />
@@ -26,7 +32,7 @@ import Card from '@site/src/components/Card';
 
 <h3> Software guides</h3>
 
-<div class="cardGrid">
+<div className="cardGrid">
     <Card imageUrl="user-guide/choose-next.png" headerText="Software installation" linkUrl="/user-guide/software-set-up" />
 </div>
 
