remove B+, link to our cable assembly

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -156,7 +156,7 @@ Yes, follow the instructions [here](https://forum.pioreactor.com/t/creating-stir
 
 We've designed the hardware and software to be compatible with most Raspberry Pis that have an onboard Wifi and a 40 pin header. That includes (at the time of writing):
 
-*   Raspberry Pi 3 Model B & B+
+*   Raspberry Pi 3 Model B+
 *   Raspberry Pi 3 Model A+
 *   Raspberry Pi 4 Model B ² ³
 *   Raspberry Pi 5 ² ³
