Fix spelling and grammar errors in docs

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -127,9 +127,9 @@ Stirring is performed with a micro stir bar inside the vial, controlled by a pai
 
 Of course! The maximum length of a stir bar is 20mm. Keep the height low as to not interfere with the optics. (The provided stir bar is 3mm high). Try using other stir bar shapes / designs!
 
-### The magnets rubs against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
+### The magnets rub against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
 
-Dis-attach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
+Detach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
 
 ### How can I increase the strength of the magnetic force applied to the stirbar?
 
