more on growth model

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -20,15 +20,15 @@ Before you get started, you'll need to have the following:
 
 1.  A Raspberry Pi (our list of recommended Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
 2.  A blank microSD card (our recommended microSD cards is [here](/user-guide/common-questions#what-microsd-cards-do-you-recommend))
-3.  A suitable power supply for the Raspberry Pi (our recommended power supply units are [here](/user-guide/common-questions#what-power-supply-unit-do-i-need))
+3.  A suitable power supply for the Raspberry Pi (our recommended power supply units are [here](/user-guide/common-questions#what-power-supply-unit-do-i-need)). You don't need to plug power in yet.
 4.  A computer with internet access and ability to read & write to a microSD card
 
 :::
 
-### Setting up your Raspberry Pi
+### Setting up your Raspberry Pi's SD Card
 
 
-We'll start your blank microSD card.
+We'll start with your blank microSD card.
 
 1. Download the [Pioreactor leader and worker image file](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_leader_worker.zip). Leave it as a zip file - no need to unzip it.
 
