Adding OD table

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -38,7 +38,27 @@ The button can be [reprogrammed](/developer-guide/hat-button), too.
 
 Under _Inventory_ -> _Leader_, there is a card titled _Cluster clocks_. You can change the date and time there.
 
+### What are the measurements of the vials?
 
+40ml vial outer diameter
+|                   |  Bottom  |  Middle  |
+|:------------------|:--------:|:--------:|
+|                   | 27.50 mm | 27.53 mm |
+| Standard Deviation|  0.03 mm |  0.03 mm |
+| 0.02 percentile   | 27.44 mm | 27.48 mm |
+| 0.05 percentile   | 27.45 mm | 27.48 mm |
+| 0.95 percentile   | 27.55 mm | 27.57 mm |
+| 0.98 percentile   | 27.55 mm | 27.58 mm |
+
+20ml vial outer diameter
+|                   |  Bottom  |  Middle  |
+|:------------------|:--------:|:--------:|
+|                   | 27.48 mm | 27.51 mm |
+| Standard Deviation|  0.04 mm |  0.05 mm |
+| 0.02 percentile   | 27.41 mm | 27.44 mm |
+| 0.05 percentile   | 27.42 mm | 27.45 mm |
+| 0.95 percentile   | 27.52 mm | 27.58 mm |
+| 0.98 percentile   | 27.54 mm | 27.59 mm |
 
 ## Optical density and LEDs
 
