adding new measurements

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -40,25 +40,27 @@ Under _Inventory_ -> _Leader_, there is a card titled _Cluster clocks_. You can 
 
 ### What are the measurements of the vials?
 
-40ml vial outer diameter
-|                   |  Bottom  |  Middle  |
-|:------------------|:--------:|:--------:|
-|                   | 27.50 mm | 27.53 mm |
-| Standard Deviation|  0.03 mm |  0.03 mm |
-| 0.02 percentile   | 27.44 mm | 27.48 mm |
-| 0.05 percentile   | 27.45 mm | 27.48 mm |
-| 0.95 percentile   | 27.55 mm | 27.57 mm |
-| 0.98 percentile   | 27.55 mm | 27.58 mm |
+|  40ml vials     | Bottom OD | Middle OD | Bottom to Neck Height |  Neck Height | Total Height |
+|:----------------------|:---------:|:---------:|:---------------------:|:------------:|:------------:|
+| **Average**           | 27.50 mm  | 27.53 mm  | 81.52 mm              | 13.18 mm     | 94.70 mm     |
+| **Standard Deviation**| 0.03 mm   | 0.03 mm   | 0.33 mm               | 0.35 mm      | 0.36 mm      |
+| **2 percentile**      | 27.44 mm  | 27.48 mm  | 80.82 mm              | 12.41 mm     | 93.85 mm     |
+| **5 percentile**   | 27.45 mm  | 27.48 mm  | 80.97 mm              | 12.92 mm     | 94.04 mm     |
+| **95 percentile**   | 27.55 mm  | 27.57 mm  | 81.85 mm              | 13.56 mm     | 95.13 mm     |
+| **98 percentile**   | 27.55 mm  | 27.58 mm  | 81.91 mm              | 13.64 mm     | 95.18 mm     |
 
-20ml vial outer diameter
-|                   |  Bottom  |  Middle  |
-|:------------------|:--------:|:--------:|
-|                   | 27.48 mm | 27.51 mm |
-| Standard Deviation|  0.04 mm |  0.05 mm |
-| 0.02 percentile   | 27.41 mm | 27.44 mm |
-| 0.05 percentile   | 27.42 mm | 27.45 mm |
-| 0.95 percentile   | 27.52 mm | 27.58 mm |
-| 0.98 percentile   | 27.54 mm | 27.59 mm |
+-----------
+
+|   20ml vials    | Bottom OD | Middle OD | Bottom to Neck Height |  Neck Height | Total Height |
+|:----------------------|:---------:|:---------:|:---------------------:|:------------:|:------------:|
+| **Average**           | 27.48 mm  | 27.51 mm  | 45.08 mm              | 12.32 mm     | 57.40 mm     |
+| **Standard Deviation**| 0.04 mm   | 0.05 mm   | 0.31 mm               | 0.15 mm      | 0.28 mm      |
+| **2 percentile**   | 27.41 mm  | 27.44 mm  | 44.60 mm              | 12.07 mm     | 56.86 mm     |
+| **5 percentile**   | 27.42 mm  | 27.45 mm  | 44.64 mm              | 12.09 mm     | 56.97 mm     |
+| **95 percentile**   | 27.52 mm  | 27.58 mm  | 45.50 mm              | 12.54 mm     | 57.83 mm     |
+| **98 percentile**   | 27.54 mm  | 27.59 mm  | 45.54 mm              | 12.60 mm     | 57.91 mm     |
+
+
 
 ## Optical density and LEDs
 
