new codex workflow

--- a/user-guide/03-Extending your Pioreactor/01-cluster-management/03-change-model.mdx
+++ b/user-guide/03-Extending your Pioreactor/01-cluster-management/03-change-model.mdx
@@ -14,7 +14,7 @@ You can update the model that the software uses for each unit from the **Invento
 2. Locate the Pioreactor you want to configure and open the **Model** dropdown.
 3. Pick the correct entry. The change is saved immediately.
 
-![The Inventory page with the Model dropdown highlighted.](/img/user-guide/inventory-model-overview.png)
+![Inventory card with the Model dropdown and options highlighted.](/img/user-guide/inventory-model-dropdown.png)
 
 Changes to the model update any UI text, configuration safety limits, and workflows that depend on vessel geometry.
 
