--- a/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
@@ -13,30 +13,18 @@ The Pioreactor comes with a large set of functionality and behaviour to accompli
 
 From your Pioreactor's interface, the "Plugins" button on the left navigation bar will display all your currently installed plugins, and some recommended plugins. We also encourage you to explore our [forums](https://forum.pioreactor.com/) for more plugins created by the community.
 
-![Plugin page in the Pioreactor UI. The page shows a list of plugins, with a description of the plugin under each one.](/img/user-guide/plugin_page.png)
+![Plugins page with Install plugin by name highlighted](/img/user-guide/plugins-overview.png)
 
 You can also use the "Install plugin by name" button in the top-right to install a plugin that is not featured on this page.
 
-![Plugin page in the Pioreactor UI. The "install plugin by name" is highlighted.](/img/user-guide/plugin_page_button_highlight.png)
+![Install plugin dialog highlighting the plugin name field and Install button](/img/user-guide/plugins-install-dialog.png)
+
+The installer runs on the unit you target. Installing on the leader adds the plugin cluster-wide (the leader distributes to its workers). Installing on an individual worker only affects that single Pioreactor.
 
 
 ### Automations installed via plugins
 
 Some plugins add new automations to your Pioreactor. After installing, new dosing, LED, or temperature automations will be available in the list of automations available to you.
-
-![The UI of an automation installed via a plugin. The plugin is highlighted in the dropdown.](/img/user-guide/custom_automation_plugin.png)
-![The UI of an automation installed via a plugin, with the automation's settings displayed.](/img/user-guide/custom_automation_plugin2.png)
-
-### Activities installed via plugins
-
-Some plugins add new activities to your Pioreactor.  After installation, an activity's state and settings will show up on each Pioreactor's card. Below, we've installed the pioreactor-air-bubbler plugin:
-
-![The Pioreactor card with the newly installed activity displayed.](/img/user-guide/custom_job_plugin.png)
-
-Managing on/off and settings are done just like any other job, in the Manage dialog:
-
-![The list of activities, that now includes the activity installed via a plugin (highlighted).](/img/user-guide/custom_job_plugin2.png)
-![The list of settings of activities, and specific settings for the new activity are highlighted.](/img/user-guide/custom_job_plugin3.png)
 
 ### Uninstalling plugins
 
