remove toc, more codex

--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting started guides
 slug: /getting-started
+hide_table_of_contents: true
 ---
 
 import Card from '@site/src/components/Card';
