--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -3,6 +3,7 @@ id: software-set-up
 description: Install the Pioreactor software onto the Raspberry Pi
 title: Software installation
 slug: /software-set-up
+hide_table_of_contents: true
 ---
 
 import TOCInline from '@theme/TOCInline';
