--- a/user-guide/03-Extending your Pioreactor/01-cluster-management/03-change-model.mdx
+++ b/user-guide/03-Extending your Pioreactor/01-cluster-management/03-change-model.mdx
@@ -3,6 +3,7 @@ id: change-model
 title: Change your Pioreactor model
 sidebar_label: Change Pioreactor model
 description: Adjust the Pioreactor model in the Inventory page and register custom models that appear in the UI.
+hide_table_of_contents: true
 ---
 
 
