--- a/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
@@ -1,6 +1,7 @@
 ---
 title: Using community plugins
 slug: /using-community-plugins
+hide_table_of_contents: true
 ---
 
 import TOCInline from '@theme/TOCInline';
