--- a/user-guide/03-Extending your Pioreactor/06b-list-of-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06b-list-of-plugins.mdx
@@ -1,6 +1,7 @@
 ---
 title: List of available plugins
 slug: /available-plugins
+hide_table_of_contents: true
 ---
 
 import Layout from '@theme/Layout';
