--- a/user-guide/03-Extending your Pioreactor/20-updating-software.mdx
+++ b/user-guide/03-Extending your Pioreactor/20-updating-software.mdx
@@ -1,6 +1,7 @@
 ---
 title: Updating the Pioreactor software
 slug: /updating-software
+hide_table_of_contents: true
 ---
 
 import ButtonDownloadVersionedReleaseZip from '@site/src/components/ButtonDownloadVersionedReleaseZip';
