--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -1,6 +1,7 @@
 ---
 title: Common questions
 slug: /common-questions
+hide_table_of_contents: true
 ---
 
 import TOCInline from '@theme/TOCInline';
