--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -12,12 +12,16 @@ import Card from '@site/src/components/Card';
 <h3> Pioreactor 40ml assembly</h3>
 
 <div className="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/pioreactor_40ml_v1.0_splash.jpeg" headerText="Pioreactor 40ml" isNew={true} linkUrl="/user-guide/40ml-hardware-setup-intro"/>
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_40ml_v1.5_splash.jpeg" headerText="Pioreactor 40ml v1.5" isNew={true} linkUrl="/user-guide/40ml-v15-hardware-setup-intro"/>
+
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_40ml_v1.0_splash.jpeg" headerText="Pioreactor 40ml v1.0" linkUrl="/user-guide/40ml-hardware-setup-intro"/>
 </div>
 
 <h3> Pioreactor 20ml assembly</h3>
 
 <div className="cardGrid">
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.5_splash.jpeg" headerText="Pioreactor 20ml v1.5" linkUrl="/user-guide/20ml-v15-hardware-setup-intro" isNew={true} />
+
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" linkUrl="/user-guide/20ml-v11-hardware-setup-intro"/>
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.0_splash.png" headerText="Pioreactor 20ml v1.0" linkUrl="/user-guide/hardware-setup-intro"/>
 </div>
