--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -9,13 +9,15 @@ hide_table_of_contents: true
 import TOCInline from '@theme/TOCInline';
 import ButtonDownloadVersionedImage from '@site/src/components/ButtonDownloadVersionedImage';
 
+:::tip
+Hi 👋 ! Pioreactor team here: the software for Pioreactor v1.5 isn't _quite_ ready, but likely this week of Nov 10th. Follow here: https://forum.pioreactor.com/t/heads-up-v1-5-software-not-ready-yet/972/1
+:::
+
 
 ### Before you begin
 
 You can expect the setup process to take 10-15 minutes. If you encounter any problems, feel free to email us for support at hello@pioreactor.com.
 
-
-:::info
 
 Before you get started, you'll need to have the following:
 
@@ -24,7 +26,6 @@ Before you get started, you'll need to have the following:
 3.  A suitable power supply for the Raspberry Pi (our recommended power supply units are [here](/user-guide/common-questions#what-power-supply-unit-do-i-need)). You don't need to plug power in yet.
 4.  A computer with internet access and ability to read & write to a microSD card
 
-:::
 
 ### Setting up your Raspberry Pi's SD Card
 
