--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -74,7 +74,7 @@ What is an image file? It's a file that contains all the required software prein
 
 9. Click "Yes" to begin writing. A prompt *may* appear asking for permission to write, accept it. Writing will take up to 5 minutes. Perfect time for a tea break.
 
-    <img src="/img/user-guide/coffee.svg" width="250" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
+    <img src="/img/user-guide/coffee.svg" width="250" alt="Screenshot of what your settings should look like" style={{margin: "80px auto", display:"block"}} />
 
 
 10.  Once writing is complete, remove the microSD card, and place it into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor. Example for a Raspberry Pi A model:
@@ -102,6 +102,8 @@ What is an image file? It's a file that contains all the required software prein
 
 14. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
 
+
+    <img src="/img/misc/scientist_holding_pioreactor_right.svg" width="350" alt="Screenshot of what your settings should look like" style={{margin: "60px auto", display:"block"}} />
 
 ## Adding additional workers to your cluster
 
